fix overflow

--- a/public/css/proposal.css
+++ b/public/css/proposal.css
@@ -172,7 +172,7 @@ label{
     margin-left: 25%;
     margin-right: 25%;   
     text-align: center;
-
+    overflow-x: hidden;
 }
 
 input#proposal{
