--- a/public/css/review.css
+++ b/public/css/review.css
@@ -80,6 +80,10 @@
     border: none;
 }
 
+table{
+    overflow-x: scroll !important;
+}
+
 .card-body th{
     color: purple;
     text-align: center;
@@ -136,5 +140,18 @@ input[type=submit]:hover{
 
     .navbar-light .navbar-nav .nav-link:focus {
         color: white;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .card-body{
+        padding-left: 0;
+        padding-right: 0;
+        overflow-x: scroll;
+    }
+    
+    .card-body .penilaian{
+        padding-left: 70px;
+        padding-right: 70px;
     }
 }
