--- a/public/css/reviewer.css
+++ b/public/css/reviewer.css
@@ -174,6 +174,8 @@
     }
 }
 
+
+
 @media screen and (max-width: 437px){
     .card-proposal{
         margin: 0;
@@ -182,18 +184,18 @@
         padding-right: 20px;
         padding-left: 20px;
     }
+    
+    .card-header h1{
+        font-size: 20px;
+    }
 }
 
-@media screen and (max-width: 437px){
+@media screen and (max-width: 275px){
     .card-proposal{
         margin: 0;
         margin-bottom: 20px;
         margin-top: 20px;    
-        padding-right: 0px;
-        padding-left: 0px;
-    }
-    
-    .card-header h1{
-        font-size: 20px;
+        padding-right: 5px;
+        padding-left: 5px;
     }
 }
