--- a/public/css/viewmemb.css
+++ b/public/css/viewmemb.css
@@ -58,6 +58,10 @@
     margin-top: 60px;
 }
 
+.card-body{
+    overflow-x: scroll;
+}
+
 .foreach div{
     display: inline-block;
 }
@@ -113,5 +117,17 @@
 
     .navbar-light .navbar-nav .nav-link:focus {
         color: white;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .card-body{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    
+    th{
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
